@@ -1,6 +1,6 @@
 libmandir = $(LIB_MAN_DIR)
 
-libman_SOURCES = \
+libman_PRE = \
 	XtAddActions.man \
 	XtAddCallback.man \
 	XtAddEventHandler.man \
@@ -109,12 +109,12 @@ libman_SOURCES = \
 	XtTranslateCoords.man \
 	XtVaCreateArgsList.man
 
-libman_DATA = $(libman_SOURCES:man=@LIB_MAN_SUFFIX@) \
+libman_DATA = $(libman_PRE:man=@LIB_MAN_SUFFIX@) \
 	      $(all_shadows:=.@LIB_MAN_SUFFIX@)
 
 BUILT_SOURCES = shadows.DONE
 
-EXTRA_DIST = $(libman_SOURCES)
+EXTRA_DIST = $(libman_PRE)
 
 CLEANFILES = $(libman_DATA)
 
